# wdm

./: .gitignore  Makefile.am  README  README.config  README.voins  configure.ac
configs/: GiveConsole.in  TakeConsole.in  Xaccess  Xreset.in  Xservers.in  Xsession  Xstartup.in  wdm-config.in  wdmLogin-config
doc/: wdm.man.in
include/: consolekit.h  dm.h  dm_auth.h  dm_socket.h  greet.h  runtest.h  wdm.h  wdmLogin.h  wdmPrefs.h  wdmconfig.h  wdmlib.h
po/: LINGUAS  Makevars  POTFILES.in  cs.po  de.po  en.po  es.po  fr_FR.po  ja.po  ru.po  wdm.pot
src/TestLogin/: TestLogin.c
src/libwdm/: debug.c  environment.c  names.c  plcheckers.c
src/wdm/: Greet.c  access.c  auth.c  choose.c  consolekit.c  daemon.c  dm.c  dpylist.c  file.c  genauth.c  loghelpers.c  mitauth.c  netaddr.c  policy.c  protodpy.c  reset.c  resource.c  server.c  session.c  socket.c  util.c  verify.c  xdmcp.c
src/wdmChooser/: chooser.c
src/wdmLogin/: Login.c  config.c
src/wdmPrefs/: prefs.c  testPanel.c  testPanel2.c
